<resources>
  <string name="app_name">account</string>

  <string name="current_avatar">当前头像</string>
  <string name="optional_avatar">可选头像</string>
  <string name="submit">提交</string>
  <string name="personal_avatar">个人头像</string>
  <string name="submit_avatar">更换头像</string>
  <string name="confirm_cancel_account">确认注销</string>
  <string name="cancel">取消</string>
  <string name="cancel_account">注销账户</string>
  <string name="composition">作品</string>
  <string name="composition_count">%s 作品</string>
  <string name="moment">动态</string>
  <string name="profile_chat">私信</string>
  <string name="already_follow">已关注</string>
  <string name="fans">粉丝</string>
  <string name="collection">喜欢</string>
  <string name="followed">已关注</string>
  <string name="edit">编辑</string>
  <string name="me">我</string>
  <string name="years_old">%d岁</string>
  <string name="comment">评论</string>
  <string name="comment_count">%d万+</string>
  <string name="forward">转发</string>
  <string name="favorite">喜欢</string>
  <string name="question">提问</string>
  <string name="answer">回答</string>
  <string name="favorite_count">%s 喜欢</string>
  <string name="mark_for_us">给我们评分</string>
  <string name="cancel_favorite">取消点赞</string>
  <string name="nickname_verifying">%s 审核中</string>
  <string name="un_authenticated">未认证</string>
  <string name="authenticating">认证中</string>
  <string name="authenticated">已认证</string>
  <string name="go_to_setting">点击设置</string>
  <string name="go_to_description">点击填写</string>
  <string name="favorite_total">共 %d 个%s</string>
  <string name="gvideo_copyright">今视频 版权所有</string>
  <string name="user_protocol">用户协议</string>
  <string name="privacy_policy">隐私保护政策</string>
  <string name="download_qr_code">今视频下载二维码</string>
  <string name="formatted_version">版本 %s</string>
  <string name="about_gvideo">关于今视频</string>
  <string name="general_setting">通用设置</string>
  <string name="accept_push_notification">接受推送通知</string>
  <string name="whether_auto_play">自动播放视频</string>
  <string name="whether_auto_play_next_content">自动播放下一个视频</string>
  <string name="opened">已开启</string>
  <string name="unopened">未开启</string>
  <string name="auto_play_in_any_network">使用移动流量和WIFI</string>
  <string name="auto_play_only_in_wifi">仅WIFI</string>
  <string name="not_auto_play">不自动播放</string>
  <string name="auto_play_next_content_in_any_network">使用移动流量和WIFI</string>
  <string name="auto_play_next_content_only_in_wifi">仅WIFI</string>
  <string name="not_auto_play_next_content">不自动切换</string>
  <string name="select_gender">选择性别</string>
  <string name="select_birthday">选择生日</string>
  <string name="canceling_favorite">正在取消点赞&#xB7;&#xB7;&#xB7;</string>
  <string name="uploading_authentication_info">正在上传认证信息&#xB7;&#xB7;&#xB7;</string>
  <string name="uploading_avatar">正在上传头像&#xB7;&#xB7;&#xB7;</string>
  <string name="pgc_video">视频</string>
  <string name="pgc_news">文章</string>
  <string name="pgc_all">全部</string>
  <string name="pgc_special">专题</string>
  <string name="guess_you_like">猜你喜欢</string>
  <string name="person_you_maybe_like">你可能感兴趣的人</string>
  <string name="batch_replace">换一批</string>
  <string name="one_key_follow">一键关注</string>
  <string name="one_key_follow_high_quality_author">一键关注优质作者</string>
  <string name="complete">完成</string>
  <string name="all">全部</string>
  <string name="no_more_data">没有更多数据了</string>
  <string name="follow_success">关注成功</string>
  <string name="invite_code_verification_failed">邀请码核验失败</string>
  <string name="invite_code_error">邀请码错误</string>
  <string name="input_invite_code">输入邀请码</string>
  <string name="input_verification_code">输入验证码</string>
  <string name="please_read_policy">请先阅读下方的用户协议和隐私政策并勾选</string>

  <!--手机号界面-->
  <string name="fragment_phone_login">手机号登录</string>
  <string name="fragment_phone_rebind">请输入新的手机号</string>
  <string name="fragment_phone_phone_number_hint">请输入手机号</string>
  <string name="fragment_phone_next">下一步</string>
  <string name="fragment_phone_login_for_agreement">我已查看并同意</string>
  <string name="fragment_phone_user_contract">用户协议</string>
  <string name="fragment_phone_and">和</string>
  <string name="fragment_phone_privacy_policy">隐私政策</string>
  <!--手机号界面-->

  <!--短信验证码界面-->
  <string name="fragment_sms_code_title">输入验证码</string>
  <string name="fragment_sms_code_hint">请输入验证码</string>
  <string name="fragment_invite_code_hint">请输入邀请码</string>
  <string name="fragment_sms_code_obtain_sms_code">获取验证码</string>
  <string name="fragment_sms_code_resend_sms_code">重新发送（%d）</string>
  <string name="fragment_sms_code_login">登录</string>

  <string name="fragment_sms_send_sms_code_successfully">发送验证码成功</string>
  <!--短信验证码界面-->

  <!--个人抽屉界面-->
  <string name="fragment_profile_drawer_message_and_notification">消息与活动通知</string>
  <string name="fragment_profile_drawer_account_and_security">账号与安全</string>
  <string name="fragment_profile_drawer_general_setting">通用设置</string>
  <string name="fragment_profile_drawer_feedback_and_help">反馈与帮助</string>
  <string name="invite_friend">邀请好友</string>
  <string name="fragment_profile_drawer_about_gvideo">关于今视频</string>
  <string name="fragment_profile_drawer_settle_in">我想入驻</string>
  <string name="fragment_profile_drawer_clear_cache">清除缓存</string>
  <!--个人抽屉界面-->

  <!--账户与安全-->
  <string name="fragment_account_security_rebind_phone">换绑手机号</string>
  <string name="fragment_account_security_real_name_authentication">实名认证</string>
  <string name="fragment_account_security_cancel_account">注销账户</string>
  <string name="fragment_account_security_logout">退出登录</string>
  <string name="fragment_account_un_authenticate">未认证</string>
  <string name="fragment_account_authenticating">认证中</string>
  <string name="fragment_account_authenticated">已认证</string>
  <!--账户与安全-->

  <!--个人主页面-->
  <string name="fragment_profile_title">个人资料编辑</string>
  <string name="fragment_profile_click_top_change_avatar">更换头像</string>
  <string name="fragment_profile_nickname">昵称</string>
  <string name="fragment_profile_gender">性别</string>
  <string name="fragment_profile_male">男</string>
  <string name="fragment_profile_female">女</string>
  <string name="fragment_profile_birthday">生日</string>
  <string name="fragment_profile_region">地区</string>
  <string name="fragment_profile_only_can_be_seen_by_self">仅自己可见</string>
  <string name="fragment_profile_description">个人介绍</string>
  <string name="fragment_profile_crop_error">图片保存失败</string>
  <!--个人主页面-->

  <!--身份认证界面-->
  <string name="fragment_authentication_id_card_hint">请输入身份证号</string>
  <string name="fragment_authentication_upload_id_card_front_picture">上传身份证姓名面照片</string>
  <string name="fragment_authentication_upload_id_card_back_picture">上传身份证国徽面照片</string>
  <string name="fragment_authentication_upload_id_card_self_picture">上传手持身份证照片</string>
  <string name="fragment_authentication_submit">提交</string>
  <string name="fragment_authentication_camera">拍摄</string>
  <string name="fragment_authentication_gallery">手机相册</string>
  <string name="fragment_authentication_attention">注意事项：\n1.请保证身份证照片清晰完整，无任何遮挡，同时避免照片反光：\n2.请尽量让身份证照片占满屏幕，并且露出身份证边缘。\n3.根据国家法律法规规定，您正在使用实名认证服务，您授权今视频及合作方在实名认证过程中采集您的个人身份证信息、视频图像信息、面部特征（静态或动态）信息，我们将确保对本次采集到的信息履行相应的安全保障义务。 </string>
  <!--身份认证界面-->

  <!--修改昵称界面-->
  <string name="fragment_modify_nickname_save">完成</string>
  <string name="fragment_modify_nickname_title">修改昵称</string>
  <!--修改昵称界面-->

  <!--修改个人简介界面-->
  <string name="fragment_modify_description_title">设置个人简介</string>
  <string name="fragment_modify_description_done">完成</string>
  <string name="fragment_modify_description_description_hint">请输入个人简介</string>
  <!--修改个人简介界面-->

  <!-- 修改头像弹窗 -->
  <string name="fragment_modify_avatar_entry_local">更换系统默认头像</string>
  <string name="fragment_modify_avatar_entry_gallery">从相册中选取</string>
  <string name="fragment_modify_avatar_entry_camera">拍一张</string>
  <!-- 修改头像弹窗 -->

  <!--弹窗-->
  <string name="dialog_cancel">取消</string>
  <string name="dialog_sure">确定</string>
  <string name="dialog_done">完成</string>
  <string name="dialog_ok">好的</string>

  <!--简单取消视图-->
  <string name="simple_cancel_item_view_cancel">取消</string>

  <!--性别视图-->
  <string name="gender_item_view_male">男</string>
  <string name="gender_item_view_female">女</string>

  <!--隐私范围视图-->
  <string name="privacy_range_public">公开可见</string>
  <string name="privacy_range_only_self">仅自己可见</string>
  <string name="privacy_gender">年龄可见范围</string>
  <string name="privacy_birthday">生日可见范围</string>

  <!--弹窗-->


  <!--====================注销界面====================-->
  <string name="fragment_cancel_account_import_tip_title">一、重要提示</string>
  <string name="fragment_cancel_account_import_tip_content">注销今视频账号是不可恢复的操作，您应自行备份账号相关的信息和数据，操作之前，请确认与今视频账号相关的所有服务均已妥善处理。</string>
  <string name="fragment_cancel_account_remember_title">二、请谨记</string>
  <string name="fragment_cancel_account_remember_content">注销今视频账号，您将无法再使用本今视频账号或找回您添加或绑定的任何内容或信息，包括但不限于： \n\n1. 您将无法登录，使用本今视频账号。您的朋友将无法通过本今视频联系您。 \n\n2.本今视频账号的个人资料和历史信息（包括但不限于昵称、头像、作品、消息记录、粉丝、关注等）都将无法找回。 \n\n3.关注本今视频账号的所有用户都将被取消关注，与本今视频账号相关的所有功能或服务都将无法继续使用。 \n\n4.在本今视频账号注销期间，如果本账号被他人投诉、被国家机关检查或正处于公诉、仲裁程序中，今视频有权自行终止本今视频账号的注销而无需另行得到您的同意。 请注意：注销您的今视频账号并不代表本账号注销前的行为和责任得到和面或减轻。</string>
  <string name="fragment_cancel_account_cancel_account_contract">《注销协议》</string>
    <string name="update_avatar">更换头像</string>
    <string name="discover_the_excitement_around_you">发现身边精彩</string>
    <string name="upload_avatar">上传头像</string>
  <string name="unfollow_chat_tip">发私信需要关注后才可以进行,是否立即关注并发送私信?</string>
  <string name="cancel_now">立即取消</string>
  <string name="think_about_more">我再想想</string>
    <string name="report_reason">举报理由</string>
    <string name="your_select_answer">你咨询的老师</string>
</resources>
