<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    >
  <data>
    <variable
        name="viewModel"
        type="com.jxntv.account.ui.profile.ProfileViewModel"
        />

    <variable
        name="user"
        type="com.jxntv.account.model.UserObservable"
        />
  </data>
  <com.jxntv.widget.GVideoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/all_layout_background"
      android:orientation="vertical"
      >
    <com.jxntv.widget.GVideoLinearLayout style="@style/ProfileStyle.AvatarContainer">
      <com.jxntv.widget.GVideoImageView
          style="@style/ProfileStyle.Avatar"
          android:onClick="@{(v)->viewModel.modifyAvatar(v)}"
          app:placeholder="@{@drawable/ic_default_avatar}"
          bind:circleCrop="@{true}"
          bind:imageUrl="@{user.avatarUrl}"
          />

      <com.jxntv.widget.GVideoTextView
          style="@style/ProfileStyle.ChangeAvatar"
          android:onClick="@{(v)->viewModel.modifyAvatar(v)}"
          android:text="@string/fragment_profile_click_top_change_avatar"
          />
    </com.jxntv.widget.GVideoLinearLayout>
    <!--昵称-->
    <com.jxntv.widget.GVideoCellView
        style="@style/ProfileStyle.Cell"
        android:onClick="@{(v)->viewModel.modifyNickName(v)}"
        app:cvLeftText="@string/fragment_profile_nickname"
        app:cvRightBottomText="@{user.newNickname}"
        app:cvRightText="@{user.nickname ?? @string/go_to_setting}"
        app:cvRightTopText="@{user.nickname}"
        app:cvShowRightBottomText="@{user.newNickname != null}"
        app:cvShowRightText="@{user.newNickname == null}"
        app:cvShowRightTopText="@{user.newNickname != null}"
        />
    <!--性别-->
    <com.jxntv.widget.GVideoCellView
        style="@style/ProfileStyle.Cell"
        android:onClick="@{()->viewModel.modifyGender()}"
        app:cvLeftText="@string/fragment_profile_gender"
        app:cvRightBottomText="@{user.genderVisibility}"
        app:cvRightText="@{user.gender ?? @string/go_to_setting}"
        app:cvRightTopText="@{user.gender}"
        app:cvShowRightBottomText="@{user.genderVisibility != null}"
        app:cvShowRightText="@{user.genderVisibility == null}"
        app:cvShowRightTopText="@{user.genderVisibility != null}"
        />
    <!--生日-->
    <com.jxntv.widget.GVideoCellView
        style="@style/ProfileStyle.Cell"
        android:onClick="@{()->viewModel.modifyBirthday()}"
        app:cvBottomDriverMarginLeft="0dp"
        app:cvLeftText="@string/fragment_profile_birthday"
        app:cvRightBottomText="@{user.birthdayVisibility}"
        app:cvRightText="@{user.birthday ?? @string/go_to_setting}"
        app:cvRightTopText="@{user.birthday}"
        app:cvShowRightBottomText="@{user.birthdayVisibility != null}"
        app:cvShowRightText="@{user.birthdayVisibility == null}"
        app:cvShowRightTopText="@{user.birthdayVisibility != null}"
        />
    <com.jxntv.widget.GVideoCellView
        style="@style/ProfileStyle.Cell"
        android:onClick="@{()->viewModel.modifyRegion()}"
        app:cvBottomDriverMarginLeft="0dp"
        app:cvLeftText="@string/fragment_profile_region"
        app:cvRightBottomText="@{user.birthdayVisibility}"
        app:cvRightText="@{user.region ?? @string/go_to_setting}"
        app:cvRightTopText="@{user.region}"
        app:cvShowRightBottomText="false"
        app:cvShowRightText="true"
        app:cvShowRightTopText="false"
        />
    <!--简介-->
    <com.jxntv.widget.GVideoCellView
        android:id="@+id/cell_view_description"
        style="@style/ProfileStyle.Cell"
        android:onClick="@{(v)->viewModel.modifyDescription(v)}"
        app:cvLeftText="@string/fragment_profile_description"
        app:cvRightBottomText="@{user.newDescription}"
        app:cvRightText="@{user.description ?? @string/go_to_description}"
        app:cvRightTopText="@{user.description}"
        app:cvShowRightBottomText="@{user.newDescription != null}"
        app:cvShowRightText="@{user.newDescription == null}"
        app:cvShowRightTopText="@{user.newDescription != null}"
        />
  </com.jxntv.widget.GVideoLinearLayout>
</layout>
