<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
  <data>
    <variable
        name="viewModel"
        type="com.hzlz.aviation.feature.account.ui.cancel.CancelAccountViewModel"
        />
    <import type="android.widget.ImageView" />
  </data>
  <com.hzlz.aviation.library.widget.widget.GVideoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >
    <com.hzlz.aviation.library.widget.widget.GVideoScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/c_bg01"
        android:fillViewport="true"
        >
      <com.hzlz.aviation.library.widget.widget.GVideoConstraintLayout
          style="@style/FragmentCancelAccount.Container"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >
        <!--提示-->
        <com.hzlz.aviation.library.widget.widget.GVideoTextView
            android:id="@+id/text_view_important_tip_title"
            style="@style/FragmentCancelAccount.ImportTipTitle"
            android:text="@string/fragment_cancel_account_import_tip_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <com.hzlz.aviation.library.widget.widget.GVideoTextView
            android:id="@+id/text_view_important_tip_content"
            style="@style/FragmentCancelAccount.ImportTip"
            android:text="@string/fragment_cancel_account_import_tip_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_important_tip_title"
            />
        <!--谨记-->
        <com.hzlz.aviation.library.widget.widget.GVideoTextView
            android:id="@+id/text_view_remember_title"
            style="@style/FragmentCancelAccount.RememberTitle"
            android:text="@string/fragment_cancel_account_remember_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_important_tip_content"
            />
        <com.hzlz.aviation.library.widget.widget.GVideoTextView
            android:id="@+id/text_view_remember_content"
            style="@style/FragmentCancelAccount.Remember"
            android:layout_height="0dp"
            android:text="@string/fragment_cancel_account_remember_content"
            app:layout_constraintBottom_toTopOf="@id/image_view_check"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_remember_title"
            />
        <!--Check-->
        <com.hzlz.aviation.library.widget.widget.GVideoImageView
            android:id="@+id/image_view_check"
            style="@style/FragmentCancelAccount.CheckAgreement"
            android:onClick="@{(v)->viewModel.readCheck((ImageView)v)}"
            app:layout_constraintBottom_toTopOf="@id/text_view_confirm"
            app:layout_constraintTop_toBottomOf="@id/text_view_remember_content"
            />
        <com.hzlz.aviation.library.widget.widget.GVideoTextView
            android:id="@+id/text_view_read_and_agree"
            style="@style/FragmentCancelAccount.AgreementTip"
            android:text="@string/all_read_and_agree"
            app:layout_constraintBottom_toBottomOf="@id/image_view_check"
            app:layout_constraintLeft_toRightOf="@id/image_view_check"
            app:layout_constraintTop_toTopOf="@id/image_view_check"
            />
        <com.hzlz.aviation.library.widget.widget.GVideoTextView
            style="@style/FragmentCancelAccount.CancelContact"
            android:onClick="@{(v)->viewModel.showCancelAccountContract(v)}"
            android:text="@string/fragment_cancel_account_cancel_account_contract"
            app:layout_constraintBottom_toBottomOf="@id/image_view_check"
            app:layout_constraintLeft_toRightOf="@id/text_view_read_and_agree"
            app:layout_constraintTop_toTopOf="@id/image_view_check"
            />
        <!--按钮-->
        <TextView
            android:id="@+id/text_view_confirm"
            style="@style/FragmentCancelAccount.Confirm"
            android:enabled="@{viewModel.enableConfirm}"
            android:onClick="@{(v)->viewModel.confirm(v)}"
            android:text="@string/confirm_cancel_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/text_view_cancel"
            />
        <TextView
            android:id="@+id/text_view_cancel"
            style="@style/FragmentCancelAccount.Cancel"
            android:layout_width="0dp"
            android:onClick="@{(v)->viewModel.cancel(v)}"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@id/text_view_confirm"
            app:layout_constraintLeft_toRightOf="@id/text_view_confirm"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_view_confirm"
            />
      </com.hzlz.aviation.library.widget.widget.GVideoConstraintLayout>
    </com.hzlz.aviation.library.widget.widget.GVideoScrollView>
  </com.hzlz.aviation.library.widget.widget.GVideoLinearLayout>
</layout>
